# Tractor

./: .gitignore  .stylelintrc.json  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  Untitled-1.json  app.config.js  app.config.ts  app.json  babel.config.js  beta-5.json  beta-7.json  debug_duplicate_cards.ts  eas.json  eslint.config.js  expo-router.d.ts  jest.config.js  metro.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  run_simulations.sh  skills-lock.json  tsconfig.json
.github/: copilot-instructions.md
__tests__/: AIPlayerView.test.tsx  CardPlayArea.test.tsx  GameTable.test.tsx  HumanPlayerView.test.tsx  aiLogic.test.ts  bot3CardLoss.test.ts  bot3TrickWinner.test.ts  cardCountEquality.test.ts  cardCountIntegration.test.ts  comboTypes.test.ts  comprehensiveCardTracking.test.ts  dealingBug.test.ts  doublePlayDetection.test.ts  finalCardCountVerification.test.ts  followSuit.test.ts  fullGameSimulation.test.ts  gameLoop.test.ts  gamePlayManager.test.ts  gameRoundManager.test.ts  gameStateManagement.test.ts  humanMultiCardLoss.test.ts  humanTrickWinnerBug.test.ts  humanWinsAndLeads.test.ts  jokerPairs.test.ts  playerTransitions.test.ts  setup.js  timingSynchronization.test.ts  trickCompletion.test.ts  trickCompletionSequence.test.ts  trumpManager.test.ts  trumpPairs.test.ts  winningPlayerIndexBug.test.ts
analysis/: analysis_query.sql  analyze_logs.py  bigquery_analyser.py  bigquery_main.py  bigquery_setup.py  bigquery_upload.py  config.py  generate_kpi_report.py  generate_local_report.py  kpi_report_query.sql  local_analyzer.py  (+4 more)
(+493 files in other folders)
