[project]
name = "tractor"
version = "0.1.0"
description = "Tractor card game with AI analysis and BigQuery reporting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Google Cloud Platform
    "google-cloud-bigquery>=3.35.1",
    "google-cloud-storage>=2.10.0", 
    "google-cloud-bigquery-datatransfer>=3.19.2",
    "google-api-python-client>=2.177.0",
    "google-auth-httplib2>=0.2.0",
    
    # Data Processing
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "db-dtypes>=1.4.3",
    
    # Visualization
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]
